// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-modal-type Renders \`field-modal-type\` with custom props 1`] = `
<widget-settings-item-stub
  columns="[object Object]"
  title="Type of the weather modal window"
>
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="modalType"
                role="radio"
                type="radio"
                value="more-info"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              More info
            </label>
          </div>
          <div
            class="v-radio theme--light v-item--active"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light primary--text"
              >
                radio_button_checked
              </i>
              <input
                aria-checked="true"
                name="modalType"
                role="radio"
                type="radio"
                value="alarm-list"
              />
              <div
                class="v-input--selection-controls__ripple primary--text"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Alarm list
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="modalType"
                role="radio"
                type="radio"
                value="both"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Both
            </label>
          </div>
        </div>
      </div>
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`field-modal-type Renders \`field-modal-type\` with default props 1`] = `
<widget-settings-item-stub
  title="Type of the weather modal window"
>
  <div
    class="v-input v-input--is-label-active v-input--is-dirty theme--light v-input--selection-controls v-input--radio-group v-input--radio-group--column"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="height: auto;"
      >
        <div
          class="v-input--radio-group__input"
          role="radiogroup"
        >
          <div
            class="v-radio theme--light v-item--active"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light primary--text"
              >
                radio_button_checked
              </i>
              <input
                aria-checked="true"
                name="modalType"
                role="radio"
                type="radio"
                value="more-info"
              />
              <div
                class="v-input--selection-controls__ripple primary--text"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              More info
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="modalType"
                role="radio"
                type="radio"
                value="alarm-list"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Alarm list
            </label>
          </div>
          <div
            class="v-radio theme--light"
          >
            <div
              class="v-input--selection-controls__input"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                radio_button_unchecked
              </i>
              <input
                aria-checked="false"
                name="modalType"
                role="radio"
                type="radio"
                value="both"
              />
              <div
                class="v-input--selection-controls__ripple"
              />
            </div>
            <label
              class="v-label theme--light"
              style="left: 0px; position: relative;"
            >
              Both
            </label>
          </div>
        </div>
      </div>
      <div
        class="v-messages theme--light"
      >
        <transition-group-stub
          class="v-messages__wrapper"
          name="message-transition"
          tag="div"
        />
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;
